// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinischeduleBlock renders a block 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Start Time
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X
         
        <span
          className="m-minischedule__headsign"
        >
          Revenue
        </span>
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        {"time":21,"place":"end","midRoute":false}
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleBlock renders a not found state 1`] = `"No block found"`;

exports[`MinischeduleBlock renders pulls and deadheads 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        {"time":20,"place":"start","midRoute":false}
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Pull Out
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Deadhead
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Pull Back
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing Off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleBlock renders the loading state 1`] = `"loading..."`;

exports[`MinischeduleRun renders a not found state 1`] = `"No run found"`;

exports[`MinischeduleRun renders a run 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__row"
  >
    <div
      className="m-minischedule__icon"
    />
    <div
      className="m-minischedule__left-text"
    >
      {"breakType":"Break","startTime":10,"endTime":11}
    </div>
  </div>,
  <div
    className="m-minischedule__piece-rows"
  >
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Start Time
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        R_X
         
        <span
          className="m-minischedule__headsign"
        >
          Revenue
        </span>
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
    <div
      className="m-minischedule__row"
    >
      <div
        className="m-minischedule__icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="m-minischedule__left-text"
      >
        Swing Off
      </div>
      <div
        className="m-minischedule__right-text"
      >
        12:00am
      </div>
    </div>
  </div>,
]
`;

exports[`MinischeduleRun renders the loading state 1`] = `"loading..."`;
